# dontwork

./: .env  README.md  docker-compose.yaml  pyproject.toml
todolist/: settings.py
todolist/core/: admin.py
todolist/core/migrations/: 0001_initial.py
