[tool.poetry]
name = "diplom"
version = "0.1.0"
description = ""
authors = ["Rezvanceva <elle81998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.5"
envparse = "^0.2.0"
postgres = "^4.0"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
